--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "grunt-istanbul": "~0.3.0",
     "jasmine-reporters": "0.4.x",
     "karma": "0.12.x",
+    "karma-junit-reporter": "~0.2.2",
     "karma-coverage": "0.2.x",
     "karma-chrome-launcher": "0.1.x",
-    "karma-jasmine": "0.1.x",
+    "karma-jasmine": "~0.1.0",
     "karma-phantomjs-launcher": "0.1.x",
     "phantomjs": "1.9.x"
   },
